BUG: module_v4skin | styles -> within action-icons, the dropdown-menu is opened aligned to the left, avoiding an extension of the viewpoort to the right [ART #1419]

--- a/module_v4skin/admin/skins/kajona_v4/less/kajona-overrides.less
+++ b/module_v4skin/admin/skins/kajona_v4/less/kajona-overrides.less
@@ -411,6 +411,10 @@ footer {
     min-width: 180px;
 }
 
+.actions .generalContextMenu {
+    .dropdown-menu-right;
+}
+
 
 .ui-autocomplete {
     max-height: 300px;
